// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loader > renders active with custom percentage 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders active with default percentage 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders default props 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with color neutral and primary 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.emotion-3 {
  fill: #e9eaeb;
  font-size: 2.1875rem;
  dominant-baseline: middle;
  text-anchor: middle;
}

.emotion-8 {
  fill: #8c40ef;
  font-size: 2.1875rem;
  dominant-baseline: middle;
  text-anchor: middle;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#e9eaeb"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
      <text
        class="emotion-3 emotion-4"
        x="50"
        y="50"
      >
        Colored text
      </text>
    </svg>
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
      <text
        class="emotion-8 emotion-4"
        x="50"
        y="50"
      >
        Colored text
      </text>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with custom size 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 100px; width: 100px;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with inlined color 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.emotion-3 {
  fill: #ff0000;
  font-size: 2.1875rem;
  dominant-baseline: middle;
  text-anchor: middle;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#ff0000"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
      <text
        class="emotion-3 emotion-4"
        x="50"
        y="50"
      >
        Colored text
      </text>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with inlined trailColor 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#ff0000"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with percentage 75 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-animation: spin 0.75s linear infinite;
  animation: spin 0.75s linear infinite;
}

.emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      aria-valuetext="75%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="65.97344572538566"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with strokeWidth 25 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="37.5"
        stroke="#d9dadd"
        stroke-width="25"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="37.5"
        stroke="#8c40ef"
        stroke-dasharray="235.61944901923448"
        stroke-dashoffset="188.4955592153876"
        stroke-linecap="round"
        stroke-width="25"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with text 100% 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

.emotion-3 {
  fill: #8c40ef;
  font-size: 2.1875rem;
  dominant-baseline: middle;
  text-anchor: middle;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
      <text
        class="emotion-3 emotion-4"
        x="50"
        y="50"
      >
        100%
      </text>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with trailColor danger 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#b3144d"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with trailColor neutral 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with trailColor primary 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with trailColor secondary 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#ac22e7"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with trailColor success 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#22674e"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#8c40ef"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Loader > renders with unknown inlined color 1`] = `
<DocumentFragment>
  .emotion-2 {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="emotion-0 emotion-1"
      role="progressbar"
      style="height: 2.5rem; width: 2.5rem;"
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="#d9dadd"
        stroke-width="16"
      />
      <circle
        class="emotion-2"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="unknown"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;
